feat(function): collapse section clicking on title

--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
       </div>
     </section>
   </main>
+  <div class="button__top">TOP</div>
   <footer class="page__footer">
     <p>&copy Udacity</p>
   </footer>
